--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact design</title>
-        <link rel="icon" href="assets/img/icon_gris_victormontoya.ico">
+        <link rel="icon" href="assets/img/ico_portafolio.png">
         <link rel="stylesheet" href="css/style.css"></li>
     </head>
     <body >
